More cleaning up.